--- a/Services.Business/Services.Business.csproj
+++ b/Services.Business/Services.Business.csproj
@@ -10,6 +10,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\DataAccess.Providers\DataAccess.Providers.csproj" />
+    <ProjectReference Include="..\Helpers\Helpers.csproj" />
   </ItemGroup>
 
 </Project>
