1. Added the ability to automatically subscribe to a task if possible. 2. Added the ability to automatically submit tasks on the site

--- a/Configuration/appsettings.CoreConfigurations.json
+++ b/Configuration/appsettings.CoreConfigurations.json
@@ -1,13 +1,23 @@
 {
   "ConnectionStrings": {
-    "DevConnection": "Server=(localdb)\\MSSQLLocalDB;Database=Tasker800;Trusted_connection=true;"
+    "DevConnection": "Server=(localdb)\\MSSQLLocalDB;Database=Tasker445;Trusted_connection=true;"
   },
   "Sites": {
     "Aviso": {
       "Url": "https://aviso.bz/",
       "AuthUrl": "https://aviso.bz/login",
+      "TasksUrl": "https://aviso.bz/work-task?plagin=",
+      "TaskUrl": "https://aviso.bz/work-task-read?adv=",
       "Username": "biking",
       "Password": "h9z2xvhf"
+    },
+    "Advigo": {
+      "Url": "https://advego.com/",
+      "AuthUrl": "https://advego.com/login/",
+      "TasksUrl": "https://advego.com/job/find/?s=7&amp;tender=1&amp;white=1&amp;open=1&amp;like_filter=1&amp;ic=643&amp;p=",
+      "TaskUrl": "https://aviso.bz/work-task-read?adv=",
+      "Username": "r.kaliaskar@mail.ru",
+      "Password": "Make@231"
     }
   }
 }
