File uploading for aviso.bs New tasks parsing for aviso.bs

--- a/Configuration/appsettings.CoreConfigurations.json
+++ b/Configuration/appsettings.CoreConfigurations.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DevConnection": "Server=(localdb)\\MSSQLLocalDB;Database=Tasker323;Trusted_connection=true;"
+    "DevConnection": "Server=(localdb)\\MSSQLLocalDB;Database=Tasker992;Trusted_connection=true;"
   },
   "Sites": {
     "Aviso": {
@@ -9,7 +9,8 @@
       "TasksUrl": "http://aviso.bz/work-task?plagin=",
       "TaskUrl": "http://aviso.bz/work-task-read?adv=",
       "Username": "biking",
-      "Password": "h9z2xvhf"
+      "Password": "h9z2xvhf",
+      "SiteId": 1
     },
     "Advigo": {
       "Url": "https://advego.com/",
@@ -17,7 +18,8 @@
       "TasksUrl": "https://advego.com/job/find/?s=7&amp;tender=1&amp;white=1&amp;open=1&amp;like_filter=1&amp;ic=643&amp;p=",
       "TaskUrl": "https://aviso.bz/work-task-read?adv=",
       "Username": "r.kaliaskar@mail.ru",
-      "Password": "Make@231"
+      "Password": "Make@231",
+      "SiteId": 2
     }
   }
 }
