--- a/Helpers/Helpers.csproj
+++ b/Helpers/Helpers.csproj
@@ -8,4 +8,9 @@
       <PackageReference Include="Selenium.WebDriver" Version="4.0.1" />
     </ItemGroup>
 
+    <ItemGroup>
+      <ProjectReference Include="..\DataAccess.Providers\DataAccess.Providers.csproj" />
+      <ProjectReference Include="..\Models\Models.csproj" />
+    </ItemGroup>
+
 </Project>
