--- a/Configuration/appsettings.CoreConfigurations.json
+++ b/Configuration/appsettings.CoreConfigurations.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DevConnection": "Server=(localdb)\\MSSQLLocalDB;Database=Tasker992;Trusted_connection=true;"
+    "DevConnection": "Server=(localdb)\\MSSQLLocalDB;Database=Tasker991;Trusted_connection=true;"
   },
   "Sites": {
     "Aviso": {
@@ -20,6 +20,15 @@
       "Username": "r.kaliaskar@mail.ru",
       "Password": "Make@231",
       "SiteId": 2
+    },
+    "WMail": {
+      "Url": "http://www.wmmail.ru/",
+      "AuthUrl": "http://www.wmmail.ru/",
+      "TasksUrl": "http://www.wmmail.ru/index.php?cf=uzd-viewtask",
+      "TaskUrl": "http://www.wmmail.ru/index.php?cf=uzd-readtask&zdid=",
+      "Username": "Biking",
+      "Password": "Nuke1042",
+      "SiteId": 3
     }
   }
 }
