--- a/Helpers/Helpers.csproj
+++ b/Helpers/Helpers.csproj
@@ -1,8 +1,8 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
     <PropertyGroup>
-        <TargetFramework>net5.0</TargetFramework>
-    </PropertyGroup>
+		<TargetFramework>net6.0</TargetFramework>
+	</PropertyGroup>
 
     <ItemGroup>
       <PackageReference Include="Selenium.WebDriver" Version="4.0.1" />
@@ -10,6 +10,7 @@
 
     <ItemGroup>
       <ProjectReference Include="..\DataAccess.Providers\DataAccess.Providers.csproj" />
+      <ProjectReference Include="..\DTOs\DTOs.csproj" />
       <ProjectReference Include="..\Models\Models.csproj" />
     </ItemGroup>
 
