--- a/Configuration/appsettings.CoreConfigurations.json
+++ b/Configuration/appsettings.CoreConfigurations.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DevConnection": "Server=localhost;Port=5432;Database=postgres;User Id=postgres;Password=123456;"
+    "DevConnection": "Server=localhost;Port=5432;Database=postgres;User Id=postgres;Password=admin;"
   },
   "Sites": {
     "Aviso": {
